# qt_py

./: .gitignore  CMakeLists.txt  debug_task.py  main.cpp  ui_common.py  ui_service.py
doc/: DESIGN.md
tasks/: idk_task.py  image_task.py  ocr_task.py  pdf_task.py  video_task.py
